--- a/style.css
+++ b/style.css
@@ -205,6 +205,7 @@ border: none;
     height: 449px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 128px;
 }
 .last-details-about{
     text-align: center;
