--- a/style.css
+++ b/style.css
@@ -189,6 +189,7 @@ border: none;
     color: rgba(39, 39, 39, 0.60);
     font-size: 18px;
     font-weight: 400;
+    margin-bottom: 48px;
 
 }
 .instagram-img{
