--- a/style.css
+++ b/style.css
@@ -221,13 +221,10 @@ border: none;
 }
 .last-details-description{
     color: rgba(39, 39, 39, 0.60);
-text-align: center;
-font-family: Lato;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: 30px;
-}
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom: 48px;
+    }
 .last-details-email{
     border-radius: 8px;
     background: #FFF;
